US-0000037 Add 'Copado External ID' field to Account, Contact, Opportunity and Opp Product

--- a/srcMyCoreApp/main/default/layouts/Account-Formato de cuentas.layout-meta.xml
+++ b/srcMyCoreApp/main/default/layouts/Account-Formato de cuentas.layout-meta.xml
@@ -21,7 +21,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>COE__c</field>
+                <field>Copado_External_ID__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
