US-0000068 TestDataUpdate2/////KD

--- a/srcMyCoreApp/main/default/layouts/SBQQ__PriceRule__c-SBQQ__Price Rule Layout.layout-meta.xml
+++ b/srcMyCoreApp/main/default/layouts/SBQQ__PriceRule__c-SBQQ__Price Rule Layout.layout-meta.xml
@@ -20,8 +20,12 @@
                 <field>SBQQ__ConditionsMet__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Required</behavior>
                 <field>Copado_External_ID__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Ready_for_Deployment__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
