--- a/srcMyCoreApp/main/default/layouts/SBQQ__PriceCondition__c-SBQQ__Price Condition Layout.layout-meta.xml
+++ b/srcMyCoreApp/main/default/layouts/SBQQ__PriceCondition__c-SBQQ__Price Condition Layout.layout-meta.xml
@@ -32,7 +32,7 @@
                 <field>SBQQ__TestedFormula__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Required</behavior>
                 <field>Copado_External_ID__c</field>
             </layoutItems>
         </layoutColumns>
