--- a/srcMyCoreApp/main/default/layouts/Case-Formato de casos.layout-meta.xml
+++ b/srcMyCoreApp/main/default/layouts/Case-Formato de casos.layout-meta.xml
@@ -78,6 +78,10 @@
                 <behavior>Edit</behavior>
                 <field>CS_URL__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>CS_Bool__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
