--- a/srcMyCoreApp/main/default/layouts/Opportunity-Formato de oportunidades.layout-meta.xml
+++ b/srcMyCoreApp/main/default/layouts/Opportunity-Formato de oportunidades.layout-meta.xml
@@ -28,8 +28,12 @@
                 <field>CampaignId</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Required</behavior>
                 <field>Copado_External_ID__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Schedule__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
