--- a/srcMyCoreApp/main/default/layouts/Opportunity-SBQQ__CPQ Opportunity Layout.layout-meta.xml
+++ b/srcMyCoreApp/main/default/layouts/Opportunity-SBQQ__CPQ Opportunity Layout.layout-meta.xml
@@ -52,8 +52,12 @@
                 <emptySpace>true</emptySpace>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Required</behavior>
                 <field>Copado_External_ID__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Schedule__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
